--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,21 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+@layer base{
+   body{
+      @apply font-body bg-black scrollbar-hide;
+   }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
+@layer components {
+   .sidebarIcon {
+      @apply h-6 text-[#808080] cursor-pointer;
+   }
+   .tag{
+     @apply py-1.5 px-3 text-[#cecece] rounded-xl text-xs font-bold border-2 border-[#484848]
+   }
 }
